--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,20 +1,19 @@
+name: Latest blog post workflow
 on:
-  push:
-  schedule:
-    - cron: "0 */1 * * *"
+  schedule: # Run workflow automatically
+    - cron: '0 * * * *' # Runs every hour, on the hour
+  workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the GitHub Actions Workflow page directly
+permissions:
+  contents: write # To write the generated contents to the readme
+
 jobs:
-  blog:
+  update-readme-with-blog:
+    name: Update this repo's README with latest blog posts
     runs-on: ubuntu-latest
-    name: Fetch and Generate Blog Posts
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Generate
-        uses: ErrorGamer2000/github-readme-blog-post-action@v1
+      - name: Pull in dev.to posts
+        uses: gautamkrishnar/blog-post-workflow@v1
         with:
-          feed_urls: https://jmersh.github.io/feed.xml
-      - name: Commit changed files
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Save Generated Blog Posts
-          skip_checkout: true
+          feed_list: "https://jmersh.github.io/feed.xml"
